# yuru

./: .editorconfig  .gitattributes  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  deny.toml  install  install.ps1  plan.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/: release.yml
.github/workflows/: ci.yml  release.yml
benches/: search.rs
crates/yomi-cli/: Cargo.toml
crates/yomi-cli/src/: main.rs  shell.rs
crates/yomi-cli/tests/: cli.rs
crates/yomi-cli/tests/fixtures/: mixed_paths.txt
crates/yomi-core/: Cargo.toml
crates/yomi-core/src/: candidate.rs  fzf_query.rs  lib.rs  matcher.rs  normalize.rs  query.rs  rank.rs  stats.rs
crates/yomi-ja/: Cargo.toml
crates/yomi-ja/src/: lib.rs  reading.rs  romaji.rs
crates/yomi-tui/: Cargo.toml
crates/yomi-tui/src/: lib.rs
crates/yomi-zh/: Cargo.toml
crates/yomi-zh/src/: lib.rs  pinyin.rs
crates/yuru/: Cargo.toml
crates/yuru-core/: Cargo.toml
crates/yuru-core/src/: candidate.rs  config.rs  fzf_query.rs  lib.rs  matcher.rs  normalize.rs  query.rs  rank.rs  stats.rs
crates/yuru-core/src/candidate/: tests.rs
crates/yuru-core/src/fzf_query/: tests.rs
crates/yuru-core/src/matcher/: tests.rs
crates/yuru-core/src/normalize/: tests.rs
crates/yuru-core/src/query/: tests.rs
crates/yuru-core/src/rank/: tests.rs
crates/yuru-ja/: Cargo.toml
crates/yuru-ja/src/: lib.rs  numeric.rs  reading.rs  romaji.rs
crates/yuru-ko/: Cargo.toml
crates/yuru-ko/src/: hangul.rs  lib.rs
crates/yuru-tui/: Cargo.toml
crates/yuru-tui/src/: actions.rs  api.rs  keys.rs  lib.rs  run.rs  search_worker.rs  state.rs  terminal.rs
crates/yuru-tui/src/preview/: builtin.rs  cache.rs  command.rs  image.rs  mod.rs
crates/yuru-tui/src/render/: highlight.rs  layout.rs  mod.rs  preview_pane.rs  results.rs
crates/yuru-tui/src/tests/: actions.rs  helpers.rs  highlight.rs  image.rs  keys.rs  mod.rs  preview.rs  render.rs  search_worker.rs  state.rs
crates/yuru-zh/: Cargo.toml
crates/yuru-zh/src/: lib.rs  pinyin.rs
crates/yuru/src/: aliases.rs  backend.rs  cli.rs  compat.rs  config.rs  configure.rs  doctor.rs  fields.rs  input.rs  main.rs  options.rs  shell.rs  shell_words.rs
crates/yuru/tests/: cli.rs  cli_config.rs  cli_fields.rs  cli_fzf_compat.rs  cli_input.rs  cli_language.rs  cli_shell.rs  cli_walker.rs
crates/yuru/tests/support/: mod.rs
docs/: README.ja.md  README.ko.md  README.zh.md  config.md  demo.md  fzf-compat.md  install-uninstall.md  internals.md  language-matching.md  performance.md  troubleshooting.md
docs/assets/: yuru-demo.cast
scripts/: bench  cargo-env  check  install-hooks
src/: lib.rs
tests/: golden_ranking.rs
