[package]
name = "yuru-workspace"
version = "0.1.1"
edition = "2021"
publish = false

[workspace]
members = [
    "crates/yuru-core",
    "crates/yuru-ja",
    "crates/yuru-zh",
    "crates/yuru-tui",
    "crates/yuru",
]
default-members = [
    ".",
    "crates/yuru-core",
    "crates/yuru-ja",
    "crates/yuru-zh",
    "crates/yuru-tui",
    "crates/yuru",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Ameyanagi/yuru"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
clap = { version = "4.5", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
crossterm = { version = "0.28", features = ["use-dev-tty"] }
pinyin = "0.10"
predicates = "3"
proptest = "1"
rayon = "1.12"
regex = "1"
shlex = "1"
tempfile = "3"
unicode-normalization = "0.1"
walkdir = "2"
yuru-core = { path = "crates/yuru-core", version = "0.1.1" }
yuru-ja = { path = "crates/yuru-ja", version = "0.1.1" }
yuru-tui = { path = "crates/yuru-tui", version = "0.1.1" }
yuru-zh = { path = "crates/yuru-zh", version = "0.1.1" }

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
predicates.workspace = true
proptest.workspace = true
regex.workspace = true
yuru-core.workspace = true
yuru-ja.workspace = true
yuru-zh.workspace = true

[[bench]]
name = "search"
harness = false
