[package]
name = "yuru-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
description = "Core fuzzy matching and ranking library for Yuru"
keywords = ["fuzzy", "finder", "matching"]
categories = ["text-processing"]

[dependencies]
nucleo-matcher.workspace = true
rayon.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
proptest.workspace = true
