[package]
name = "yuru-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "Terminal user interface for Yuru"
keywords = ["fuzzy", "finder", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
yuru-core.workspace = true
