[package]
name = "yuru"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
description = "A fast phonetic fuzzy finder for the shell"
keywords = ["fuzzy", "finder", "phonetic", "shell"]
categories = ["command-line-utilities"]

[[bin]]
name = "yuru"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
regex.workspace = true
shlex.workspace = true
walkdir.workspace = true
yuru-core.workspace = true
yuru-ja.workspace = true
yuru-tui.workspace = true
yuru-zh.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
