[package]
name = "yuru"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
description = "A fast phonetic fuzzy finder for the shell"
keywords = ["fuzzy", "finder", "phonetic", "shell"]
categories = ["command-line-utilities"]

[[bin]]
name = "yuru"
path = "src/main.rs"

[features]
default = ["image"]
image = ["yuru-tui/image"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
ignore.workspace = true
regex.workspace = true
shlex.workspace = true
toml.workspace = true
yuru-core.workspace = true
yuru-ja.workspace = true
yuru-ko.workspace = true
yuru-tui = { workspace = true, default-features = false }
yuru-zh.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
